--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "botbuilder": "^4.0.0-preview1.2",
     "botbuilder-dialogs": "^4.0.0-preview1.2",
     "dotenv": "^2.0.0",
+    "dotenv-extended": "^2.0.2",
     "pokedex-promise-v2": "^3.1.1",
     "restify": "^4.3.4"
   },
