--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "botbuilder": "^4.0.0-preview1.2",
+    "botbuilder-core": "^4.0.0-preview1.2",
     "botbuilder-dialogs": "^4.0.0-preview1.2",
     "dotenv": "^2.0.0",
     "dotenv-extended": "^2.0.2",
