fix #5 korean search support
한글로 포켓몬 검색이 가능하도록 DB에 연결하고 쿼리하도록 변경했습니다.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^2.0.0",
     "dotenv-extended": "^2.0.2",
     "pokedex-promise-v2": "^3.1.1",
+    "promise-mysql": "^3.3.1",
     "restify": "^4.3.4"
   },
   "devDependencies": {
