--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "botbuilder-dialogs": "^4.0.0-preview1.2",
     "dotenv": "^2.0.0",
     "dotenv-extended": "^2.0.2",
+    "mysql": "^2.16.0",
     "pokedex-promise-v2": "^3.1.1",
     "promise-mysql": "^3.3.1",
     "restify": "^4.3.4"
